objects/Big_Account__b.object
<CustomObject>
    <description>tuy</description>
    <fields>
        <fullName>Knowledge_Product__c</fullName>
        <label>Knowledge Product</label>
        <length>21</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Knowledge_Products__c</fullName>
        <label>Knowledge Products</label>
        <length>21</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>test__c</fullName>
        <label>test</label>
        <length>44</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <indexes>
        <fullName>index</fullName>
        <fields>
            <name>Knowledge_Products__c</name>
            <sortDirection>ASC</sortDirection>
        </fields>
        <fields>
            <name>test__c</name>
            <sortDirection>ASC</sortDirection>
        </fields>
        <label>index</label>
    </indexes>
    <label>Big Account</label>
    <pluralLabel>Big Accounts</pluralLabel>
</CustomObject>